--- a/Examples/HTML/links.html
+++ b/Examples/HTML/links.html
@@ -12,6 +12,6 @@
 
 	<body>
 		<a href='https://google.ca/'>Go to Google</a>
-		<a href='headings.html'>HTML Heading Examples
+		<a href='headings.html'>HTML Heading Examples</a>
 	</body>
 </html>
